project modified to run correctly